Update index.html with meta tags and title changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Harian & To-Do List</title>
+
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Judul halaman -->
+  <title>To-Do List Miracle</title>
+  
+  <!-- Meta description (penting untuk Google Search) -->
+  <meta name="description" content="Aplikasi To-Do List sederhana buatan Miracle untuk mengatur jadwal harian dan tugas dengan mudah.">
+  
+  <!-- Keywords (opsional, tidak terlalu penting sekarang) -->
+  <meta name="keywords" content="to-do list, jadwal harian, aplikasi tugas, Miracle, GitHub Pages">
+  
+  <!-- Author -->
+  <meta name="author" content="MiraclemanuelSaragih">
+  
+  <!-- Open Graph untuk preview di media sosial -->
+  <meta property="og:title" content="To-Do List Miracle">
+  <meta property="og:description" content="Atur jadwal harian dan tugas dengan aplikasi To-Do List sederhana.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://miraclemanuelsaragih.github.io/to-do-list-noel-/">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+  <h1>Selamat datang di To-Do List Miracle 🎉</h1>
+  <p>Website ini membantu kamu mengatur jadwal harian dan tugas dengan mudah.</p>
+</body>
+</html>
+
+    
     <style>
         * {
             margin: 0;
