--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="google-site-verification" content="MY4oBjjTwtfB_ijL9_euK2ZiDj3fTadDdoPH0yigpAg" />
   <!-- Judul halaman -->
   <title>To-Do List Miracle</title>
   
