Fix HTML structure and update meta tags

--- a/index.html
+++ b/index.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jadwal Harian & To-Do List</title>
-
-<!DOCTYPE html>
-<html lang="id">
-<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="MY4oBjjTwtfB_ijL9_euK2ZiDj3fTadDdoPH0yigpAg" />
+
   <!-- Judul halaman -->
-  <title>To-Do List Miracle</title>
-  
-  <!-- Meta description (penting untuk Google Search) -->
+  <title>Jadwal Harian & To-Do List</title>
+
+  <!-- Verifikasi Google Search Console -->
+  <meta name="google-site-verification" content="MY4oBjjTwtfB_ijL9_euK2ZiDj3fTadDdoPH0yigpAg" />
+
+  <!-- SEO Meta Tags -->
   <meta name="description" content="Aplikasi To-Do List sederhana buatan Miracle untuk mengatur jadwal harian dan tugas dengan mudah.">
-  
-  <!-- Keywords (opsional, tidak terlalu penting sekarang) -->
   <meta name="keywords" content="to-do list, jadwal harian, aplikasi tugas, Miracle, GitHub Pages">
-  
-  <!-- Author -->
   <meta name="author" content="MiraclemanuelSaragih">
-  
+
   <!-- Open Graph untuk preview di media sosial -->
   <meta property="og:title" content="To-Do List Miracle">
   <meta property="og:description" content="Atur jadwal harian dan tugas dengan aplikasi To-Do List sederhana.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://miraclemanuelsaragih.github.io/to-do-list-noel-/">
-  
+
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- CSS: pindahkan semua CSS kamu ke sini -->
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* Tambahkan CSS lain kamu di sini */
+  </style>
 </head>
 <body>
   <h1>Selamat datang di To-Do List Miracle 🎉</h1>
   <p>Website ini membantu kamu mengatur jadwal harian dan tugas dengan mudah.</p>
+
+  <!-- Tambahkan konten utama kamu di sini -->
 </body>
 </html>
 
-    
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
         body {
             font-family: 'Inter', 'Segoe UI', sans-serif;
