Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="google-site-verification" content="MY4oBjjTwtfB_ijL9_euK2ZiDj3fTadDdoPH0yigpAg" /> 
+  
 <title>Jadwal Harian & To-Do List</title>
 
 <meta name="description" content="Aplikasi To-Do List sederhana untuk mengatur jadwal harian dan tugas.">
